# evolutiondex

./: .gitignore  Commands.md  README.md  commands.MD  evolutiondex.clauses.md  evolutiondex.contracts.md  evolutiondex.cpp  evolutiondex.hpp  safe.hpp  token_functions.cpp  utils.hpp
js/: addliquidity.js  callactions.js  closeext  closeext.js  exchange.js  inittoken.js  openext.js  package-lock.json  package.json  quickexchange.js  remliquidity.js  withdraw.js
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  contracts.hpp  contracts.hpp.in  eosio.system_tester.hpp  eosio.token_tests.cpp  evolutiondex_tests.cpp  simevo.py
tests/badtoken/: badtoken.cpp  badtoken.hpp
wesetyourfee/: wesetyourfee.cpp  wesetyourfee.hpp
wesetyourfee/complejo/: wesetyourfee.cpp  wesetyourfee.hpp
wesetyourfee/democratic/: wesetyourfee.cpp  wesetyourfee.hpp
wesetyourfee/dictator/: wesetyourfee.cpp  wesetyourfee.hpp
wevotethefee/: README.md  wevotethefee.clauses.md  wevotethefee.contracts.md  wevotethefee.cpp  wevotethefee.hpp
wevotethefee/democratic/: wevotethefee.cpp  wevotethefee.hpp
